--- a/アトラクション/竹田.html
+++ b/アトラクション/竹田.html
@@ -12,23 +12,32 @@
     <div class="ranking">
         <div class="content">
             <p>1位</p>
-            <p><img align="left" src="../img/haibisukasu.jpg">
-                あああああああああああああああああああああ
-                ああああああああああああああああああああああああああああ</p>
+            <img align="left" src="../img/haibisukasu.jpg">
+            <p class="c-text">
+                　暴力団および暴力団関係者の入園はお断りします。<br>
+　他のお客様等のご迷惑となる恐れのある場合、また東京ディズニーランドからのお願
+いに対しご協力いただけなかった場合は、入園をお断りすることや、退園していただくことがあります。<br>
+　お客様の不注意による事故について、株式会社オリエンタルランド、ディズニー・エンタプライゼズ・インクおよびそれらの関連会社は法令に基づき賠償義務が発生する場合を除き、責任を負いかねます。
+東京ディズニーリゾートでは顔認証システムを導入しております。</p>
         </div>
+        <hr>
         <br clear="all">
         <div class="content">
             <p>2位</p>
-            <p><img align="left" src="../img/haibisukasu.jpg">
+            <img align="left" src="../img/haibisukasu.jpg">
+            <p class="c-text">
                 あああああああああああああああああああああああああああああああああ</p>
         </div>
         <br clear="all">
+        <hr>
         <div class="content">
             <p>3位</p>
-            <p><img align="left" src="../img/haibisukasu.jpg">
+            <img align="left" src="../img/haibisukasu.jpg">
+            <p class="c-text">
                 あああああああああああああああああああああああああああああああああ</p>
         </div>
         <br clear="all">
+        <hr>
     </div>
 </body>
 </html>
