--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="wrapper">
         <div class="card">
-            <a href="./アトラクション">
+            <a href="./アトラクション/index.html">
                 <img src="img/haibisukasu.jpg" alt="アトラクション">
             </a>
             <h2><a href="">アトラクション</a></h2>
